--- a/src/TumblDotNet/TumblDotNet.csproj
+++ b/src/TumblDotNet/TumblDotNet.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\PostFormat.cs" />
+    <Compile Include="Models\PostType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Authentication\RequestToken.cs" />
     <Compile Include="Models\TumblrBlogInfo.cs" />
     <Compile Include="Responses\OAuthRequestTokenResponse.cs" />
     <Compile Include="Responses\TumblrBlogResponse.cs" />
+    <Compile Include="Responses\TumblrPostsResponse.cs" />
     <Compile Include="TumblrAuthenticator.cs" />
     <Compile Include="TumblrClient.cs" />
     <Compile Include="Models\TumblrFollower.cs" />
